syntax = "proto3";

package astria.sequencer.v1;

message SignedTransaction {
    bytes signature = 1;
    bytes public_key = 2;
    UnsignedTransaction transaction = 3;
}

message UnsignedTransaction {
    oneof value {
        AccountsTransaction accounts_transaction = 1;
    }   
}

message AccountsTransaction {
    bytes to = 1;
    Balance amount = 2;
    uint32 nonce = 3;
}

message Balance {
    uint64 upper = 1;
    uint64 lower = 2;
}
